<resources>
    <string name="app_name">Hangman Game</string>
    <string name="hangman">Hangman</string>
    <string name="start_game">START GAME</string>
    <string name="category">Category</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="n">N</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="q">Q</string>
    <string name="ene">Ñ</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="r">R</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="word">_ _ _ _ _ _</string>
    <string name="error">Error de conexión %1$s</string>
    <string name="you_win">You Win!</string>
    <string name="you_lose">You Lose!</string>
</resources>